@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/gearmand/Attic/gearmand-0.11-r2.ebuild,v 1.3 2009/12/23 18:59:05 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/gearmand/Attic/gearmand-0.11-r2.ebuild,v 1.4 2010/01/20 22:15:22 flameeyes Exp $
 
 EAPI=2
 
@@ -88,4 +88,12 @@ src_install() {
 	fowners gearmand /var/log/gearmand || die
 
 	find "${D}" -name '*.la' -delete || die
+}
+
+pkg_postinst() {
+	elog ""
+	elog "Unless you set the PERSISTENT_TABLE option in"
+	elog "/etc/conf.d/gearmand, Gearmand will use table 'queue'."
+	elog "If such table doesn't exist, Gearmand will create it for you"
+	elog ""
 }
