@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/gearmand
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/gearmand/ChangeLog,v 1.3 2009/12/23 18:59:05 flameeyes Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/gearmand/ChangeLog,v 1.4 2010/01/20 22:15:22 flameeyes Exp $
+
+  20 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  gearmand-0.11-r2.ebuild:
+  Add elog information at postinst, from Pavel.
 
   23 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
   gearmand-0.11-r2.ebuild:
